kubernetes/semaphore/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: semaphore-tailscale
  namespace: semaphore
  annotations:
    tailscale.com/tags: tag:semaphore

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: semaphore
      port:
        number: 3000
  tls:
  - hosts:
    - semaphore
